# data-platform

./: .env.example  .gitignore  .sqlfluffignore  Dockerfile  Dockerfile.data_foundation  Dockerfile.data_science  Dockerfile.webserver  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  workspace.yaml
.dagster_home/: dagster.yaml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.docker/: dagster.yaml  data_foundation.dockerfile  data_science.dockerfile  docker-compose.yml  webserver.dockerfile
.github/: .README.md  README.md  pull_request_template.md
.github/rulesets/: branch-delete-protection.json  main-branch-pr-rules.json
.github/workflows/: check__dbt_checks.yml  check__linting.yml  check__unit_tests.yml  create_and_deploy_docs.yml  data_foundation_dbt_checks.yml  data_foundation_python_checks.yml  data_science_python_checks.yml  dbt_checks.yml  deployment__docs.yml  deployment__prod.yml  deployment__qa.yml  dev.yml  docs.yml  docs_deploy.yml  docs_site.yml  github_pages_docs_deploy.yml  linting.yml  linting_checks.yml  prod.yml  qa.yml  static.yml  unit_tests.yml
.helm/: README.md  values.yaml
.helm/prod/: values.yaml
.helm/qa/: values.yaml
.mkdocs/: README.md  gen_doc_stubs.py  gen_pages.py  make_stubs.py  mkdocs.yml
.mkdocs/docs/: index.md
.mkdocs/docs/assets/stylesheets/: extra.css
.mkdocs/docs/getting_started/: dlthub.md  index.md  sling.md
.mkdocs/docs/getting_started/analytics/: index.md  quick_start.md
.mkdocs/docs/getting_started/dbt/: index.md  quick_start.md
.mkdocs/docs/getting_started/dlthub/: index.md  quick_start.md
.mkdocs/docs/getting_started/ingestion/dlthub/: index.md  quick_start.md
.mkdocs/docs/getting_started/ingestion/sling/: index.md  quick_start.md
.mkdocs/docs/getting_started/orchestration/dagster/: index.md  quick_start.md
.mkdocs/docs/getting_started/sling/: index.md  quick_start.md
.mkdocs/docs/getting_started/transformation/dbt/: index.md  quick_start.md
.scripts/: deploy.ps1  helm_template.yaml
.yaml/dlthub/: sources.json  sources.yaml
.yaml/sling/: connections.json  connections.yaml  replication.yaml
analyses/snowpark/astaus/: config.py  scikit_learn.ipynb  snowflake_ml.ipynb  snowpark_utils.py  user_defined_functions.ipynb  walker.ipynb
data_analytics/: .gitignore  README.md  pyproject.toml
data_analytics/analyses/snowpark/astaus/: scikit_learn.ipynb  snowflake_ml.ipynb  walker.ipynb
data_foundation/: .gitignore  .sqlfluffignore  Dockerfile  pyproject.toml
data_foundation/data_foundation/: definitions.py
data_foundation/data_foundation/defs/dbt/: constants.py  definitions.py  factory.py  translator.py
data_foundation/data_foundation/defs/dlthub/: factory.py  resources.py  translator.py
data_foundation/data_foundation/defs/dlthub/dlthub/exchange_rate/: data.py
data_foundation/data_foundation/defs/dlthub/dlthub/facebook_ads/: data.py
data_foundation/data_foundation/defs/dlthub/dlthub/google_ads/: data.py  definitions.py
data_foundation/data_foundation/defs/dlthub/dlthub/open_data/: data.py  definitions.py
data_foundation/data_foundation/defs/sling/: factory.py  translator.py
data_foundation/dbt/: dbt_project.yml  packages.yml  profiles.yml
data_foundation/dbt/groups/: marketing.yml
data_foundation/dbt/models/staging/accounts_db/: int_accounts_db__test.sql  stg_accounts_db__accounts.sql
data_foundation/dbt/models/staging/google_ads/: _sources.yml  stg_google_ads__campaigns.yml
data_foundation/dbt/state/: manifest.json
data_platform/: definitions.py
data_platform/defs/dlthub/dlthub/google_ads/: definitions.py
data_platform/defs/dlthub/dlthub/open_data/: data.py  definitions.py
data_platform/defs/sling/sling/: my_db_yay.yaml
data_platform/defs/snowpark/snowpark/hello_world/: asset.py  definitions.py
data_platform/defs/snowpark/snowpark/snowflake_ml/titanic_survived/: definitions.py  model.py
data_science/: .gitignore  Dockerfile  pyproject.toml
data_science/data_science/: definitions.py
data_science/data_science/defs/snowpark/: resources.py
data_science/data_science/defs/snowpark/snowpark/snowflake_ml/titanic_survived/: definitions.py
dbt/macros/post_hook/privacy_framework/: apply_dynamic_data_mask.sql
dbt/models/staging/open_data/: stg_open_data__titanic.sql
dbt/state/: manifest.json
docs/: dbt_docs_site.md  gen_doc_stubs.py
docs/site/: 404.html  index.html  objects.inv
docs/site/dagster/definitions/: index.html
docs/site/dagster/defs/_powerbi/definitions/: index.html
docs/site/dagster/defs/dbt/constants/: index.html
docs/site/dagster/defs/dbt/definitions/: index.html
docs/site/dagster/defs/dbt/factory/: index.html
docs/site/dagster/defs/dbt/translator/: index.html
docs/site/dagster/defs/dlthub/factory/: index.html
docs/site/dagster/defs/dlthub/resources/: index.html
docs/site/dagster/defs/dlthub/translator/: index.html
docs/site/dagster/defs/sling/definitions/: index.html
docs/site/dagster/defs/sling/factory/: index.html
docs/site/dagster/defs/sling/translator/: index.html
docs/site/dagster/utils/automation_conditions/: index.html
docs/site/dagster/utils/helpers/: index.html
docs/site/dagster/utils/keyvault_stub/: index.html
docs/site/dagster/utils/secrets/: index.html
docs/site/dbt/dbt_docs_site/: index.html
docs/site/dbt/getting_started/: index.html
docs/site/dlthub/: index.html
docs/site/search/: search_index.json
docs/site/sling/: index.html
libs/: README.md
libs/analytics_utils/: README.md  pyproject.toml
libs/analytics_utils/analytics_utils/: snowpark.py
libs/analytics_utils/src/analytics_utils/: __init__.py  snowpark.py
libs/analytics_utils/tests/: _test_snowpark.py
libs/data_platform_utils/: README.md  pyproject.toml
libs/data_platform_utils/data_platform_utils/: automation_conditions.py  keyvault_stub.py  secrets.py
libs/data_platform_utils/src/data_platform_utils/: automation_conditions.py  helpers.py  keyvault_stub.py  secrets.py
libs/data_platform_utils/tests/: test_automation_conditions.py  test_helpers.py  test_secrets.py
src/: main.py
(+14 files in other folders)
