[project]
name = "data_platform"
version = "0.1.0"
description = "Data platform demonstration that integrates dagster, dbt, sling, and dlt."
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver"
]

docs = [
    "mkdocs",
    "mkdocs-gen-files",
    "mkdocs-material",
    "mkdocs-mermaid2-plugin",
    "mkdocstrings",
    "mkdocstrings-python"
]

sqlfluff = ["sqlfluff"]
ruff = ["ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
