[project]
description = "Data platform demonstration that integrates dagster, dbt, sling, and dlt."
name = "data_platform"
version = "0.1.0"
readme = "README.md"
authors = [{name = "Andrew Staus"}]
requires-python = ">=3.13, <3.14"

dependencies = [
    "dagster-webserver",
    "sqlfluff",
    "ruff",
    "dbt-snowflake==1.10.2",
    "dbt-semantic-interfaces==0.9.0",
    "dbt-common==1.29.0",
    "dbt-adapters==1.16.6",
    "dbt-core==1.10.11",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "pytest-cov>=7.0.0",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-mermaid2-plugin",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-gen-files"
]

[dependency-groups]
sqlfluff = ["sqlfluff"]
ruff = ["ruff"]

docs = [
    "mkdocs",
    "mkdocs-material",
    "mkdocs-mermaid2-plugin",
    "mkdocstrings",
    "mkdocstrings-python",
    "mkdocs-gen-files"
]

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/data_analytics"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.coverage.report]
skip_empty = true
exclude_lines = ["pragma: no cover"]


[tool.pytest.ini_options]
testpaths = [
    "./packages/data_foundation/tests",
    "./packages/data_science/tests",
    "./libs/data_platform_utils/tests"
]

[tool.ruff]
exclude = ["packages/data_analytics"]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
quote-style = "double"
indent-style = "space"
[tool.ruff.lint]

select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]

[tool.pyright]
ignore = ["**/tests/**/*", "**/test_*"]

[tool.sqlfluff]
core.exclude_rules = ["AL07", "RF02", "ST06"]
core.max_line_length = 88
core.dialect = "snowflake"
indentation.tab_space_size = 4
layout.type.alias_expression.spacing_before = "align"
layout.type.alias_expression.align_within = "select_clause"
rules.aliasing.table.aliasing = "implicit"
rules.aliasing.column.aliasing = "implicit"

# disabled for dbt fusion, enable when support is available
# # core.templater = "dbt"
# # templater.dbt.project_dir = "./dbt"
# # templater.dbt.profiles_dir = "./dbt"
# # experimental.format.executeInTerminal = true
