[project]
name = "data_foundation"
version = "0.1.0"
description = "Data platform demonstration that integrates dagster, dbt, sling, and dlt."
requires-python = ">=3.13, <3.14"
dependencies = [
    "dagster-cloud==1.11.12",
    "dagster-dbt==0.27.12",
    "dagster-dlt==0.27.12",
    "dagster-k8s==0.27.12",
    "dagster-postgres==0.27.12",
    "dagster-sling==0.27.12",
    "dagster-snowflake==0.27.12",
    "data-platform-utils",
    "pandas>=2.3.3",
    "psutil==7.1.0",
]

[tool.uv]
override-dependencies = [
    "dbt-core; sys_platform == 'never'",
]

[tool.uv.sources]
data-platform-utils = { path = "../libs/data_platform_utils" }

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver",
]

sqlfluff = ["sqlfluff"]
ruff = ["ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
data_foundation = "data_foundation"

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
quote-style = "double"
indent-style = "space"
[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]

[tool.sqlfluff]
core.exclude_rules = ["AL07", "RF02", "ST06"]
core.max_line_length = 88
core.dialect = "snowflake"
indentation.tab_space_size = 4
layout.type.alias_expression.spacing_before = "align"
layout.type.alias_expression.align_within = "select_clause"
rules.aliasing.table.aliasing = "implicit"
rules.aliasing.column.aliasing = "implicit"

# # core.templater = "dbt"
# # templater.dbt.project_dir = "./dbt"
# # templater.dbt.profiles_dir = "./dbt"
# # experimental.format.executeInTerminal = true

[tool.dagster]
module_name = "data_foundation.definitions"
code_location_name = "data_foundation"

[tool.dg]
directory_type = "project"
project.root_module = "data_foundation"

