[project]
name = "data_science"
version = "0.1.0"
description = "Data platform demonstration that integrates dagster, dbt, sling, and dlt."
requires-python = ">=3.12, <3.13"
dependencies = [
    "dagster-cloud==1.11.12",
    "dagster-k8s==0.27.12",
    "dagster-snowflake==0.27.12",
    "dagster_postgres==0.27.12",
    "data-platform-utils",
    "faker==37.11.0",
    "psutil==7.1.0",
    "snowflake==1.8.0",
    "snowflake-ml-python==1.11.0",
    "snowflake-snowpark-python==1.36.0",
    "xgboost-cpu==3.0.5",
]

[tool.uv]
override-dependencies = [
    "xgboost; sys_platform == 'never'"
]

[tool.uv.sources]
data-platform-utils = { path = "../libs/data_platform_utils" }

[dependency-groups]
dev = [
    "dagster-dg-cli",
    "dagster-webserver"
]
ruff = ["ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
data_science = "data_science"

[tool.ruff]
line-length = 88

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
quote-style = "double"
indent-style = "space"
[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # Pyflakes
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "SIM", # flake8-simplify
    "I", # isort
]

[tool.dagster]
module_name = "data_science.definitions"
code_location_name = "data_science"

[tool.dg]
directory_type = "project"
project.root_module = "data_science"

